[graphql] refactoring